--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npx tailwindcss -i ./src/public/css/input.css -o ./src/public/css/output.css --watch",
+    "css": "npx tailwindcss -i ./src/public/css/input.css -o ./src/public/css/output.css --watch",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
